--- a/location.html
+++ b/location.html
@@ -43,43 +43,86 @@
         </ul>
     </div>
   <div class="main" id="main">
-    <h1>How to get there</h1>
-    <h2>By car</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris faucibus ac ex et tincidunt. Suspendisse volutpat, nulla eu lobortis mollis, dui ex facilisis urna, non faucibus purus nulla at velit. Fusce laoreet sagittis ex non semper. Donec fermentum ac diam id lacinia. Donec elementum felis id nisl pretium, in ornare nunc congue. Integer dignissim diam in maximus fringilla. Suspendisse vitae consectetur nisl. Praesent hendrerit ipsum pellentesque feugiat pretium.
-    </p>
-    <h2>By train - from Central Station Amsterdam </h2>
-    <p>
-        Vestibulum sit amet lacinia dui. Sed convallis nisi non ligula iaculis, ut lacinia eros scelerisque. In eu elementum magna, sit amet eleifend mauris. Morbi tincidunt tincidunt nulla eget facilisis. Nam laoreet ante at egestas tincidunt. Fusce eu justo tempus, condimentum enim sed, porttitor ante. Vestibulum consequat est id pretium porta. Proin non ipsum facilisis, suscipit nibh blandit, vulputate massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempus ac neque ut sodales.
-        </p>
-    <h2>By Bus - from Amstel Station </h2>
-    <p>
-        Nunc quis blandit ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque in dictum massa, eget dictum quam. Phasellus cursus interdum felis, sit amet aliquet dolor tempus id. Praesent ipsum ex, consectetur vel ex cursus, tempus ullamcorper quam. Suspendisse id tempor est. Donec sed auctor diam. Sed venenatis, augue eu sagittis pellentesque, diam orci molestie erat, blandit finibus orci nibh eu nibh. Mauris semper mattis felis condimentum tempor. In tincidunt placerat sollicitudin. Pellentesque a porta nisi, id feugiat turpis. Sed accumsan dapibus efficitur. Quisque non est metus. Nullam a nisi a erat sollicitudin mattis. Curabitur malesuada erat non tellus imperdiet venenatis. Praesent et erat varius, feugiat urna quis, tempor sem.
-    </p>
-    <h2>By Tram</h2>
-    <p>
-        Curabitur sollicitudin consectetur nibh, vel porta urna dignissim eu. Sed euismod in arcu vitae lobortis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget enim sed odio efficitur sodales nec eu mauris. Pellentesque quis posuere orci. Praesent at felis non ex dictum condimentum. Etiam lobortis bibendum diam vel dapibus. Vivamus urna magna, pulvinar ac congue quis, placerat sodales lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam porta facilisis tortor, sit amet efficitur turpis tempor id. Vivamus condimentum aliquam ipsum in lobortis. Proin convallis commodo neque, in tristique lectus elementum quis. Quisque tincidunt, mauris sit amet fermentum cursus, odio nunc vehicula lorem, ac mattis ipsum risus sit amet ipsum.
-    </p>
-
     <h1>Location</h1>
     <p>
         Sportcentrum Universum
         <br>Science Park 306, 1098 XH Amsterdam
     </p>
     <iframe class="location" id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.8036164702653!2d4.954769315778445!3d52.355846979783465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c6094451b3ab91%3A0x86f7024a946221ca!2sSportcentrum+Universum!5e0!3m2!1sen!2snl!4v1547346466529" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+    <h1>How to get there by car</h1>
+    <h2>By car - A1</h2>
+    <p>
+      Use the right lane to take the Ring-Oost/A10/E35 exit toward
+      Rotterdam/Luchthaven Schiphol, then keep right, follow signs for
+      Watergraafsmeer.
+    </p>
+    <h2> By car - A2 </h2>
+    <p>
+      At the interchange Knooppunt Amstel, Use the right lanes to follow signs
+      for E35/A10 toward Zaanstad. Then take exit s113 to Watergraafsmeer.
+    </p>
+    <h1> How to get there by public transport </h1>
+    <p>
+      We strongly advise you to plan your trip with 9292.nl (also available in
+      english) and ns.nl. Here you can find all the information about which
+      platforms you'll have to be.
+    </p>
+    <h2> Train </h2>
+    <p> There are 3 stations near to the USC. Depending on where you traveling
+      from you can choose between Science park, Muiderpoort or Amstel. From
+      Muiderpoort and Amstel Station you can than take a bus to the USC.</br></br>
+    <b> From Amsterdam Central / Science Park </b> </br>
+      If your traveling from amsterdam central, we recommend to take the train to Amsterdam
+      Science park. It is only 2 stops from central. </br>
+      From science park it is only 10 minutes walk to the USC Universum.</p>
+      <iframe class="location" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2436.870789940443!2d4.950581565343472!3d52.354628706224666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x47c6095c95e36775%3A0xf81b65f1590b45ad!2sAmsterdam%20Science%20Park%2C%20Amsterdam!3m2!1d52.3530008!2d4.948362899999999!4m5!1s0x47c6094451b3ab91%3A0x86f7024a946221ca!2sSportcentrum%20Universum%2C%20Science%20Park%2C%20Amsterdam!3m2!1d52.355847!2d4.956958!5e0!3m2!1snl!2snl!4v1570221903717!5m2!1snl!2snl" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    <p>
+        From Amsterdam central it is only two trainstops to Amsterdam Science
+        park.
+    </p>
+    <h2> Bus (From Amstel station or Muiderpoort station) </h2>
+    <p>
+      From Amstel station and Muiderpoort station you can get the bus 40 to
+      Muiderpoort station respectivetly to Amstel station. The busstop is
+      Science Park Aqua, which is in front of the USC Universum.
+      At the Amstelstation you can also take bus 240, which also stops at science
+      Park Aqua.
+    </p>
+    <h2> Bike (from Amstel station or Muiderpoort station) </h2>
+    <p> You can also hire a public transport bike at Amstel station and
+      Muiderpoort station. The bike costs 3.85 eur/24 hours for the first 72 hours.
+      After 72 hours, you will incur an additional charge of € 5 per 24-hour period.
+      You will need a personal OV-chipkaart on which you can load a free abonnement
+      which allow you to rent bikes (which is not free).
+      For more information, check the ns website <a href="https://www.ns.nl/en/customer-service/ov-fiets/how-the-ov-fiets-works.html"> here </a>.
     <h1>Parking</h1>
     <p>
-        Donec gravida semper gravida. Fusce tempus nulla in dignissim fringilla. Praesent vel luctus ligula, nec dapibus ex. Nullam rhoncus rutrum urna eu faucibus. Curabitur fringilla enim fringilla suscipit tempor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquam quam consectetur tellus viverra, a aliquet eros consectetur. Nunc egestas ut est ac mattis. Curabitur a nisl massa. Aliquam tristique at libero eget vehicula. Morbi non nisi accumsan, eleifend enim ac, elementum dui. Etiam euismod leo dapibus diam suscipit, sed rhoncus turpis lacinia. Nulla quis eleifend metus.
+      We have limited parking available at the location Science Park. It is
+      possible to park around the Science Park, but it will be payed parking.
+      Our tip is to park outside amsterdam to try circumvent paying expensive
+      parking rates.
+      Here are some possible locations: </br></br>
+          <b> P+R Weesp/Leeuwenveld. </b> </br>
+          374 parkingspots </br>
+          Click <a href="https://goo.gl/maps/eRo4JiPASajs8icW6"> here </a> for location on Google Maps. </br>
+          From here it is a 9 min train ride to Amsterdam Science Park. </br>
+          Due to fusion with Amsterdam, the parkingfees in Weesp can change,
+          so be sure to check parking rates before you park </br></br>
+          <b> P+R Diemen </b> </br>
+          128 parkingspots </br>
+          Click <a href="https://goo.gl/maps/1NtrKXSQMvqpRGjRA">here </a> for location on Google Maps. </br>
+          From here it is a 2 min train ride to Science Park. </br></br>
+          <b>P+R Almere Muziekwijk</b></br>
+          345 parkingspots </br>
+          Click <a href="https://goo.gl/maps/eA2Z8KJFURU4wx1h8"> here </a> for location on Google Maps. </br>
+          From here it is a 19 min train ride to Science Park. </br></br>
+
+      Remember that these are public parking spots, so they might get full really
+      quickly.
     </p>
-
-
-
-
-
   </div>
   <div class="footer" id="footer"> </div>
-  </div>
-  <script src="js/combine.js"></script>
+</div>
+<script src="js/combine.js"></script>
 </body>
 </html>
